--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,6 +1,7 @@
 <div class="searchBox">
-  <form (ngSubmit)="search()">
-    <input type="text" class="search" [(ngModel)]="searchString" name="search" placeholder="Search Github users">
-    <button type="submit" class="btn">Search</button>
+  <form (ngSubmit)="search()" #searchForm="ngForm">
+    <input type="text" class="search" [(ngModel)]="searchString" name="search" placeholder="Search Github users"
+      required>
+    <button type="submit" class="btn" [disabled]="!searchForm.valid">Search</button>
   </form>
 </div>
