--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -22,6 +22,11 @@
       background: #000;
       color: #fff;
       border-radius: 5px;
+      cursor: pointer;
+      &:disabled {
+        opacity: 0.7;
+        cursor: not-allowed;
+      }
     }
   }
 }
